objects/PHSS_TriggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PHSS_TriggerSettings</description>
    <fields>
        <fullName>AllDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CertificationProvisioningDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Provisioning Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentVersionDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Version Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserProvisioningDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Provisioning Disabled</label>
        <type>Checkbox</type>
    </fields>
    <label>PHSS Trigger Settings</label>
</CustomObject>